# Space

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Assets/: Compile.bat  Vert.spv  Vert.vert
Space/: Space.cpp  Space.h
Space/Include/: Core.h  Log.h  Maths.h  PCH.h  Timer.h  UUID.cpp  UUID.h
Space/Libs/: CMakeLists.txt
Space/Libs/glad/: CMakeLists.txt
Space/Libs/glad/include/glad/: glad.h
Space/Libs/glad/src/: glad.c
Space/Src/Events/: Events.h
Space/Src/Input/: Input.cpp  Input.h  KeyCodes.h  MouseCodes.h  RepeatCodes.h
Space/Src/Renderer/: RenderApi.h  RenderApiOverView.h  Renderer.cpp  Renderer.h  Shaders.h
Space/Src/Renderer/Vulkan/: BufferLayout.h  Buffers.cpp  Buffers.h  Shaders.cpp  Shaders.h  VertexArray.h  VertexBuffers.h  Vulkan.cpp  VulkanApi.cpp  VulkanApi.h  VulkanDevices.h  VulkanGraphicsPipeline.h  VulkanHeader.h  VulkanImplementations.cpp  VulkanQueues.h  VulkanRender.h  VulkanRenderChain.h  VulkanRenderPass.h  VulkanShader.cpp  VulkanShader.h  VulkanSurfaceKHR.h
Space/Src/Window/: Window.cpp  Window.h  WindowStack.cpp  WindowStack.h  WindowsWindow.cpp  WindowsWindow.h
